# abstract-autoscaling-challenge

./: .gitignore  CLAUDE.md  README.md  start.sh
api/: Dockerfile  main.py
api-rust/: Cargo.toml  Dockerfile
api-rust/src/: main.rs
dashboard/: app.py  cluster_config.py  k8s_monitor.py  load_generator.py  metrics.py  requirements.txt
dashboard/static/: index.html  style.css
dashboard/tests/: test_cluster_config.py
dashboard/tests/fixtures/: deployment.yaml  hpa.yaml
docs/: api-stacks-comparison.md  architecture-spec-v2.md  architecture-spec.md  rust-aws-architecture.md  work-algorithm-comparison.md
docs/diagrams/: README.md  architecture.py
docs/superpowers/plans/: 2026-04-23-cluster-config-ui.md
docs/superpowers/specs/: 2026-04-02-load-testing-infra-design.md  2026-04-23-cluster-config-ui-design.md
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  rust-deployment.yaml  rust-hpa.yaml  rust-service.yaml  service.yaml
scripts/: deploy.sh  setup.sh  teardown.sh
